# SampleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
core/: CMakeLists.txt
core/config/: global_static_config.hpp
core/engine/: CMakeLists.txt  component.hpp  object.hpp
core/engine/include/: engine.hpp
core/engine/src/: engine.cpp
core/interface/: CMakeLists.txt  interface.cpp
core/interface/include/: interface.hpp
core/libs/: CMakeLists.txt
core/model/: CMakeLists.txt
core/model/include/: model.hpp
core/model/src/: model.cpp
core/shader/: CMakeLists.txt  descriptor_sets.hpp  shader.hpp
core/shader/include/: descriptor_pool.hpp  descriptor_sets.hpp  shader.hpp  shader_module.hpp  uniform_buffer.hpp
core/shader/src/: descriptor_pool.cpp  descriptor_sets.cpp  shader.cpp  shader_module.cpp  uniform_buffer.cpp
core/system/: CMakeLists.txt
core/system/fs/: fs.hpp
core/texture/: CMakeLists.txt
core/texture/include/: texture.hpp
core/texture/src/: texture.cpp
core/vk/: CMakeLists.txt  buffer.hpp  command.hpp  device.hpp  graphics_pipeline.hpp  image.hpp  instance.hpp  logical_device.hpp  queue_family_indicies.hpp  raw_memory.hpp  renderpass.hpp  state.hpp  surface.hpp  swapchain.hpp  swapchain_support_details.hpp
core/vk/include/: buffer.hpp  command.hpp  device.hpp  graphics_pipeline.hpp  image.hpp  instance.hpp  logical_device.hpp  queue_family_indicies.hpp  renderpass.hpp  state.hpp  surface.hpp  swapchain.hpp  swapchain_support_details.hpp
core/vk/models/: vertex.hpp
core/vk/src/: buffer.cpp  command.cpp  device.cpp  graphics_pipeline.cpp  image.cpp  instance.cpp  logical_device.cpp  queue_family_indicies.cpp  renderpass.cpp  state.cpp  surface.cpp  swapchain.cpp  swapchain_support_details.cpp
harness/: game.cpp  game.hpp
shaders/: CMakeLists.txt  Script.sh  shader.frag
test/: test.cpp
test/core/shader/: shader.cpp
test/helpers/: golden_file.hpp  vk_fake.hpp
